# QTDay9Improved

./: CMakeLists.txt  Day9.pro  README.MD  main.cpp  mainwindow.cpp  mainwindow.h  part1.cpp  part1.h  part1.ui  part2.cpp  part2.h  part2.ui  part3.cpp  part3.h  part3.ui
resources/material/test/labels/00024/: 00024_930831_fb.txt
resources/material/test/labels/00025/: 00025.txt  00025_930831_fb.txt
resources/material/test/labels/00028/: 00028_930831_fb.txt
resources/material/test/labels/00034/: 00034.txt  00034_930831_fb_a.txt
resources/material/test/labels/00035/: 00035.txt  00035_930831_fb.txt
resources/material/test/labels/00038/: 00038_930831_fb.txt
resources/material/test/labels/00154/: 00154.txt  00154_931230_fb.txt  00154_940128_fb.txt
resources/material/test/labels/00155/: 00155.txt  00155_931230_fb.txt  00155_940128_fb.txt
resources/material/test/labels/00158/: 00158.txt  00158_931230_fb.txt
resources/material/test/labels/00164/: 00164.txt  00164_931230_fb_a.txt
resources/material/test/labels/00165/: 00165.txt  00165_931230_fb_a.txt
resources/material/test/labels/00168/: 00168.txt  00168_931230_fb_a.txt
resources/material/test/labels/00174/: 00174.txt  00174_931230_fb_a.txt
resources/material/test/labels/00175/: 00175.txt  00175_931230_fb_a.txt
resources/material/test/labels/00178/: 00178.txt  00178_931230_fb.txt
resources/material/test/labels/00184/: 00184.txt  00184_940128_fb.txt  00184_940422_fb.txt
resources/material/test/labels/00185/: 00185.txt  00185_940128_fb.txt  00185_940422_fb.txt
resources/material/test/labels/00188/: 00188.txt  00188_940128_fb.txt  00188_940307_fb.txt
resources/material/test/labels/00194/: 00194.txt  00194_940128_fb.txt
resources/material/test/labels/00195/: 00195.txt  00195_940128_fb.txt
resources/material/test/labels/00198/: 00198.txt  00198_940128_fb.txt
resources/material/test/labels/00204/: 00204.txt  00204_940128_fb_a.txt
resources/material/test/labels/00205/: 00205.txt  00205_940128_fb.txt
resources/material/test/labels/00208/: 00208.txt  00208_940128_fb.txt
resources/material/test/labels/00214/: 00214.txt  00214_940128_fb.txt
(+1360 files in other folders)
